--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,7 +11,7 @@ name: Release
 on:
   push:
     tags:
-      - 'v*' # 匹配 v 开头的标签，如 v1.0.0
+      - 'v*.*.*' # 匹配 v 开头的标签，如 v1.0.0
 
 permissions:
   contents: read
@@ -37,19 +37,13 @@ jobs:
       - name: Run compile
         run: deno compile --allow-all main.ts
 
-      - name: Checkout code
+      - name: Checkout
         uses: actions/checkout@v4
-      - name: Create Release
-        id: create_release
-        uses: comnoco/create-release@v2
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token is provided by Actions, you do not need to create your own token
+      - name: Release
+        uses: softprops/action-gh-release@v2
+        if: github.ref_type == 'tag'
+      - name: Release
+        uses: softprops/action-gh-release@v2
+        if: github.ref_type == 'tag'
         with:
-          tag_name: ${{ github.ref }}
-          release_name: Release ${{ github.ref }}
-          body: |
-            Changes in this Release
-            - First Change
-            - Second Change
-          draft: false
-          prerelease: false
+          files: Release.txt
