update github actions!!

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -42,5 +42,7 @@ jobs:
       - name: Release
         uses: softprops/action-gh-release@v2
         if: github.ref_type == 'tag'
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          files: Release.txt
+          files: my-i18n-inlay-hints
